# Study-buddy-AI

./: README.md
backend/: RAG_APP.db  main.py  pyproject.toml  requirements.txt
backend/core/: chain.py  file_processing.py  keys.py  llm.py  vector_store.py
backend/models/: saved_query.py
backend/routers/: Files.py  chat.py  saved_query.py
backend/schemas/: saved_query.py
backend/vector_stores/repo_46881841/: index.faiss  index.pkl
backend/vector_stores/repo_4a857cba/: index.faiss  index.pkl
backend/vector_stores/repo_f5719c9f/: index.faiss  index.pkl
frontend/css/: ai_chat.css
frontend/html/: home.html  index.html  saved_queries.html
frontend/js/: ai_chat.js  home.js
